Fix canvas blurryness attempt

--- a/css/style.scss
+++ b/css/style.scss
@@ -17,15 +17,23 @@
   --button-size: 45px;
 }
 
+main {
+  max-width: 100vw;
+  overflow-x: hidden;
+}
+
 .container {
   width: 100%;
   height: 100%;
   max-height: 100vh;
-  overflow-y: hidden;
+  min-height: 100vh;
+  max-width: 100vw;
+  overflow: hidden;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
   align-items: center;
+  position: relative;
 }
 
 h1, h2, h3, h4 {
@@ -314,11 +322,25 @@ h2 ~ p {
   canvas {
     margin: 0 auto;
     margin-bottom: 2rem;
+    width: 400px;
+    height: 400px;
+    @media(max-width: 500px) {
+      width: 320px;
+      height: 320px;
+    }
+    @media(max-width: 360px) {
+      width: 300px;
+      height: 300px;
+    }
+    @media(max-width: 320px) {
+      width: 280px;
+      height: 280px;
+    }
   }
 }
 
 .background {
-  position: fixed;
+  position: absolute;
   z-index: -1;
   &.top, &.bottom {
     top: 0;
@@ -404,4 +426,9 @@ h2 ~ p {
       }
     }
   }
+}
+
+#front {
+  min-height: 100vh;
+  width: 100vw;
 }
